swagger routes in controller
