# swagger_output.json
@@ -5,7 +5,7 @@
     "description": "API Documentation",
     "version": "1.0.0"
   },
-  "host": "localhost:3000",
+  "host": "cse341-w02-project-1.onrender.com",
   "basePath": "/",
   "tags": [
     {
@@ -14,7 +14,7 @@
     }
   ],
   "schemes": [
-    "http"
+    "https"
   ],
   "paths": {
     "/": {
@@ -29,43 +29,249 @@
     },
     "/contacts/": {
       "post": {
-        "description": "",
+        "tags": [
+          "Contacts"
+        ],
+        "description": "Endpoint to create a new contact",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Contact data",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "object"
+                },
+                "properties": {
+                  "type": "object",
+                  "properties": {
+                    "contact_id": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "example": "number"
+                        },
+                        "required": {
+                          "type": "boolean",
+                          "example": true
+                        }
+                      }
+                    },
+                    "username": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "example": "string"
+                        },
+                        "required": {
+                          "type": "boolean",
+                          "example": true
+                        }
+                      }
+                    },
+                    "email": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "example": "string"
+                        },
+                        "required": {
+                          "type": "boolean",
+                          "example": true
+                        }
+                      }
+                    },
+                    "first_name": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "example": "string"
+                        }
+                      }
+                    },
+                    "last_name": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "example": "string"
+                        }
+                      }
+                    },
+                    "birthday": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "example": "string"
+                        },
+                        "format": {
+                          "type": "string",
+                          "example": "date"
+                        }
+                      }
+                    },
+                    "role": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "example": "string"
+                        },
+                        "enum": {
+                          "type": "array",
+                          "example": [
+                            "Developer",
+                            "Designer",
+                            "Administrator",
+                            "Tester",
+                            "Analyst"
+                          ],
+                          "items": {
+                            "type": "string"
+                          }
+                        },
+                        "default": {
+                          "type": "string",
+                          "example": "Developer"
+                        }
+                      }
+                    },
+                    "favorite_color": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "example": "string"
+                        }
+                      }
+                    },
+                    "projects": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "example": "array"
+                        },
+                        "items": {
+                          "type": "object",
+                          "properties": {
+                            "type": {
+                              "type": "string",
+                              "example": "string"
+                            }
+                          }
+                        }
+                      }
+                    },
+                    "active": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "example": "boolean"
+                        }
+                      }
+                    },
+                    "joined_date": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "example": "string"
+                        },
+                        "format": {
+                          "type": "string",
+                          "example": "date"
+                        }
+                      }
+                    },
+                    "last_login_ip": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "example": "string"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        ],
         "responses": {
-          "default": {
-            "description": ""
+          "201": {
+            "description": "Contact created successfully"
+          },
+          "500": {
+            "description": "Failed to create contact"
           }
         }
       },
       "get": {
-        "description": "",
+        "tags": [
+          "Contacts"
+        ],
+        "description": "Endpoint to retrieve all contacts",
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "Contacts retrieved successfully"
+          },
+          "500": {
+            "description": "Failed to retrieve contacts"
           }
         }
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "Contacts"
+        ],
+        "description": "Endpoint to delete all contacts",
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "All contacts deleted successfully"
+          },
+          "500": {
+            "description": "Failed to delete all contacts"
           }
         }
       }
     },
     "/contacts/developer": {
       "get": {
-        "description": "",
+        "tags": [
+          "Contacts"
+        ],
+        "description": "Endpoint to retrieve all developers",
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "All developers listed successfully"
+          },
+          "404": {
+            "description": "Developers not found"
+          },
+          "500": {
+            "description": "Failed to retrieve developers"
           }
         }
       }
     },
     "/contacts/{contactId}": {
       "get": {
-        "description": "",
+        "tags": [
+          "Contacts"
+        ],
+        "description": "Endpoint to retrieve a contact by ID",
         "parameters": [
           {
             "name": "contactId",
@@ -75,13 +281,22 @@
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "Contact retrieved successfully"
+          },
+          "404": {
+            "description": "Contact not found"
+          },
+          "500": {
+            "description": "Failed to retrieve contact"
           }
         }
       },
       "patch": {
-        "description": "",
+        "tags": [
+          "Contacts"
+        ],
+        "description": "Endpoint to update a contact",
         "parameters": [
           {
             "name": "contactId",
@@ -91,13 +306,22 @@
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "Contact patched successfully"
+          },
+          "404": {
+            "description": "Contact not found"
+          },
+          "500": {
+            "description": "Failed to update contact"
           }
         }
       },
       "put": {
-        "description": "",
+        "tags": [
+          "Contacts"
+        ],
+        "description": "Endpoint to replace a contact",
         "parameters": [
           {
             "name": "contactId",
@@ -107,13 +331,22 @@
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "Contact replaced successfully"
+          },
+          "404": {
+            "description": "Contact not found"
+          },
+          "500": {
+            "description": "Failed to replace contact"
           }
         }
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "Contacts"
+        ],
+        "description": "Endpoint to delete a contact",
         "parameters": [
           {
             "name": "contactId",
@@ -123,8 +356,14 @@
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "Contact deleted successfully"
+          },
+          "404": {
+            "description": "Contact not found"
+          },
+          "500": {
+            "description": "Failed to delete contact"
           }
         }
       }
